--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.netease.mail.iamlile'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-apply plugin: 'war'
+//apply plugin: 'war'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
