--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 //apply plugin: 'war'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+//sourceCompatibility = 1.8
+//targetCompatibility = 1.8
 
 //jar {
 //    //清单文件配置
@@ -22,10 +22,10 @@ allprojects {
         }
         //mavenCentral()
     }
-    tasks.withType(JavaCompile) {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
-    }
+//    tasks.withType(JavaCompile) {
+//        sourceCompatibility = JavaVersion.VERSION_1_8
+//        targetCompatibility = JavaVersion.VERSION_1_8
+//    }
 }
 
 
