--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 group 'com.netease.mail.iamlile'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
+//apply plugin: 'java'
 //apply plugin: 'war'
 
 //sourceCompatibility = 1.8
