--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,11 @@
 group 'com.netease.mail.iamlile'
 version '1.0-SNAPSHOT'
 
-//apply plugin: 'java'
-//apply plugin: 'war'
+apply plugin: 'java'
 
-//sourceCompatibility = 1.8
-//targetCompatibility = 1.8
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
-//jar {
-//    //清单文件配置
-//    manifest {
-//        //启动类
-//        attributes 'Main-Class': 'com.mail.iamlile...'
-//    }
-//}
 
 allprojects {
     repositories {
@@ -22,10 +14,10 @@ allprojects {
         }
         //mavenCentral()
     }
-//    tasks.withType(JavaCompile) {
-//        sourceCompatibility = JavaVersion.VERSION_1_8
-//        targetCompatibility = JavaVersion.VERSION_1_8
-//    }
+    tasks.withType(JavaCompile) {
+        sourceCompatibility = JavaVersion.VERSION_1_7
+        targetCompatibility = JavaVersion.VERSION_1_7
+    }
 }
 
 
