--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'com.squareup.okhttp:okhttp:2.7.1'
     compile 'com.google.code.gson:gson:2.6.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6.2'
+    //compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6.2'
+    //compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6.2'
 }
